--- a/templates/academy.html
+++ b/templates/academy.html
@@ -340,10 +340,10 @@
                         </div>
                     </div>
                     <div id="item_img">
-                        <svg viewBox="0 0 548 308" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_5080_132575)">
-                                <path opacity="0.2" d="M190.187 208.965H337.89V281.79H190.187V208.965Z" fill="url(#paint0_linear_5080_132575)"></path>
-                                <path opacity="0.2" d="M171 93.4902H373.508V148.609H171V93.4902Z" fill="url(#paint1_linear_5080_132575)"></path>
+                        <svg viewBox="0 0 548 308" fill="none" xmlns="http://www.w3.org/2000/svg" style="position: absolute;top: 0px;left: 0px;width: 100%;height: 100%;">
+                            <g clip-path="url(https://academy.binance.com/en#clip0_5080_132575)">
+                                <path opacity="0.2" d="M190.187 208.965H337.89V281.79H190.187V208.965Z" fill="url(https://academy.binance.com/en#paint0_linear_5080_132575)"></path>
+                                <path opacity="0.2" d="M171 93.4902H373.508V148.609H171V93.4902Z" fill="url(https://academy.binance.com/en#paint1_linear_5080_132575)"></path>
                                 <path opacity="0.2" d="M176.197 48.7578H390.335V82.0091H176.197V48.7578Z" fill="url(#paint2_linear_5080_132575)"></path>
                                 <path d="M354.145 165.019L349.314 169.846L344.484 165.019L349.314 160.193L354.145 165.019Z" fill="#328DFD"></path>
                                 <path d="M248.948 208.798L252.022 205.727L255.095 208.798L252.022 211.869L248.948 208.798Z" fill="white"></path>
@@ -409,18 +409,28 @@
                                 <path d="M179.233 202.01L203.127 178.135L210.998 186L187.104 209.874L179.233 202.01Z" fill="#474D57"></path>
                                 <path d="M186.824 161.844L162.93 185.719" stroke="#474D57" stroke-width="2.80335"></path>
                                 <path d="M192.444 167.461L168.55 191.336" stroke="#474D57" stroke-width="2.80335"></path>
-                                <path></path>
-                                <path></path>
-                                <path></path>
-                                <path></path>
+                                <path d="M198.068 173.078L174.174 196.953" stroke="#474D57" stroke-width="2.80335"></path>
+                                <path d="M164.529 248.159L159.189 235.951L178.102 254.807L204.801 253.778L192.602 259.12L189.394 267.313L169.863 275.864L161.326 256.342L164.529 248.159Z" fill="#76808F"></path>
+                                <path d="M180.893 249.711L172.354 230.189L159.195 235.951L173.071 267.675L204.806 253.777L190.931 222.054L176.957 228.173L185.496 247.695L180.893 249.711Z" fill="url(#paint16_linear_5080_132575)"></path>
+                                <path d="M154.591 244.268L147.267 247.475L150.469 254.796L157.793 251.589L154.591 244.268Z" fill="#76808F"></path>
 
                             </g>
                         </svg>
                     </div>
                 </div>
             </div>
-            <div>
-
+            <div id="keep_eye">
+                <div id="clone_ke">
+                    <div id="text_ke">
+                        <div id="keep"><b>Keep an eye on Bitcoin</b></div>
+                        <div id="every">Every four years, the Bitcoin rewards are slashed in half. Find out why on the Halving page.</div>
+                        <div id="bitcoin_hp">
+                            <a href="">
+                                <p>Bitcoin halving page</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="below"></div>
