--- a/templates/academy.html
+++ b/templates/academy.html
@@ -430,6 +430,7 @@
                             </a>
                         </div>
                     </div>
+                    <img src="../static/img/academy/illus-bitcoin-halving.svg" alt="">
                 </div>
             </div>
         </div>
