Academy:Update html,css: effect-keep_eye(full), demo_academy_hinh20...

--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -886,6 +886,7 @@ html body {
 
 #clone_ke {
     display: flex;
+    justify-content: space-between;
     width: 1104px;
     height: 320px;
     margin-top: 55px;
