--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -932,6 +932,28 @@ html body {
     background-color: rgb(20, 21, 26);
 }
 
+#trading {
+    width: 100%;
+    height: 550px;
+    display: flex;
+    justify-content: center;
+}
+
+#center_TD {
+    width: 1100px;
+    height: 550px;
+    max-width: 1136px;
+    padding: 20px 10px;
+}
+
+#conten_TD {
+    width: 100%;
+    height: 28px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
 #below {
     width: 100%;
     height: 524.69px;
