--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1186,11 +1186,11 @@
                         <div class="topic">Community</div>
                         <div class="community">
                             <a href=""><i class="fa fa-telegram" aria-hidden="true"></i></a>
-                            <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>    
-                            <a href=""> <i class="fa fa-twitter" aria-hidden="true"></i></a>   
-                            <a href=""><i class="fa fa-reddit" aria-hidden="true"></i></a>    
-                            <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>    
-                            <a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a> 
+                            <a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href=""> <i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href=""><i class="fa fa-reddit" aria-hidden="true"></i></a>
+                            <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
@@ -1200,7 +1200,12 @@
             </footer>
         </div>
     </div>
-
+    <div class="chat-container"><svg viewBox="0 0 24 24" class="chat-icon" style="width: 20px; height: 20px;">
+            <path fillrule="evenodd" cliprule="evenodd"
+                d="M3 3h18v14h-9l-5 5v-5H3V3zm15 3H6v2.5h12V6zm0 5.5H6V14h12v-2.5z" fill="currentColor"></path>
+        </svg>
+        <div class="chat-text">Support</div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         window.onbeforeunload = function () {
