--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -39,7 +39,7 @@
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                     </div>
                     <div class="item-menu">
-                        <p>Delivatives</p>
+                        <p>Derivatives</p>
                         <i class="fa fa-caret-down" aria-hidden="true"></i>
                     </div>
                     <div class="item-menu">
@@ -100,7 +100,9 @@
                                         <i class="fa fa-gift" aria-hidden="true"
                                             style="font-size: 18px; color: rgb(240, 185, 11); padding: 4px;"></i>
                                         <p id="su-top">Trade Bitcoin for free </p>
-                                        <i class="fas fa-greater-than" style="padding: 5px; opacity: 0.7;"></i>
+                                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="svg-better-than" style="margin-left: 0;">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z" fill="currentColor"></path>
+                                        </svg>
                                     </a>
                                     <div class="signup-with-container">
                                         <div class="signup">
@@ -179,7 +181,9 @@
                             <h1>Popular cryptocurrencies</h1>
                             <a href="">
                                 View more markets
-                                <i class="fas fa-greater-than    " style="margin-left: 5px;"></i>
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="svg-better-than">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z" fill="currentColor"></path>
+                                </svg>
                             </a>
                         </div>
                         <div class="name-col">
