--- a/templates/academy.html
+++ b/templates/academy.html
@@ -446,7 +446,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="beginner">
+                    <div class="beginner_1">
                         <div class="clone_1">
                             <div class="item_3">
                                 <a href="">
@@ -523,6 +523,52 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div id="topics_difficulty">
+                <div id="body_TD">
+                    <div id="chose_TD">
+                        <div id="topics">
+                            <div id="text_tp">Topics:</div>
+                            <div id="text_chose">
+                                <div class="text_2">Altcoin</div>
+                                <div class="text_2">Binance</div>
+                                <div class="text_2">Bitcoin</div>
+                                <div class="text_2">Blockchain</div>
+                                <div class="text_2">Consensus</div>
+                                <div class="text_2">Cryptography</div>
+                                <div class="text_2">DeFi</div>
+                                <div class="text_2">Economics</div>
+                                <div class="text_2">Essentials</div>
+                                <div class="text_2">Ethereum</div>
+                                <div class="text_2">History</div>
+                                <div class="text_2">Metaverse</div>
+                                <div class="text_2">Mining</div>
+                                <div class="text_2">NFT</div>
+                                <div class="text_2">Privacy</div>
+                                <div class="text_2">Security</div>
+                                <div class="text_2">Tech</div>
+                                <div class="text_2">Technical Analysis</div>
+                                <div class="text_2">Trading</div>
+                                <div class="text_2">Tutorials</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="chose_dl">
+                        <div id="difficulty">Difficulty:</div>
+                        <div id="text_3">
+                            <div id="item_4"></div>
+                            <div id="item_5">Beginner</div>
+                            <div id="item_6">
+                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                    <path d="M4 11H20V13H4V11Z"></path>
+                                    <path d="M13 4V20H11V4H13Z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
         </div>
         <div id="below"></div>
