--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -1060,6 +1060,100 @@ html body {
     color: rgb(255, 255, 255);
 }
 
+#item_6 svg {
+    vertical-align: middle;
+    width: 16px;
+    height: 16px;
+}
+
+#text_4 {
+    margin-inline: 16px 0px;
+    flex-wrap: wrap;
+    align-items: center;
+    display: flex;
+    border-radius: 8px;
+    display: inline-flex;
+    justify-content: center;
+    padding: 0px 8px;
+    font-size: 12px;
+    height: 28px;
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    border: 1px solid rgba(240, 185, 11, 0.3);
+    cursor: pointer;
+    user-select: none;
+}
+
+#item_4_1 {
+    background-color: rgb(240, 185, 11);
+    border-radius: 50%;
+    margin-inline-end: 8px;
+    height: 6px;
+    width: 6px;
+}
+
+#item_5_1 {
+    font-weight: 400;
+    line-height: 1.45;
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+}
+
+#item_6_1 {
+    margin-inline-start: 8px;
+    color: rgb(255, 255, 255);
+}
+
+#item_6_1 svg {
+    vertical-align: middle;
+    width: 16px;
+    height: 16px;
+}
+
+#text_5 {
+    margin-inline: 16px 0px;
+    flex-wrap: wrap;
+    align-items: center;
+    display: flex;
+    border-radius: 8px;
+    display: inline-flex;
+    justify-content: center;
+    padding: 0px 8px;
+    font-size: 12px;
+    height: 28px;
+    color: rgb(255, 255, 255);
+    background-color: transparent;
+    border: 1px solid rgba(217, 48, 78, 0.3);
+    cursor: pointer;
+    user-select: none;
+}
+
+#item_4_2 {
+    background-color: rgb(217, 48, 78);
+    border-radius: 50%;
+    margin-inline-end: 8px;
+    height: 6px;
+    width: 6px;
+}
+
+#item_5_2 {
+    font-weight: 400;
+    line-height: 1.45;
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+}
+
+#item_6_2 {
+    margin-inline-start: 8px;
+    color: rgb(255, 255, 255);
+}
+
+#item_6_2 svg {
+    vertical-align: middle;
+    width: 16px;
+    height: 16px;
+}
+
 #below {
     width: 100%;
     height: 524.69px;
