--- a/templates/academy.html
+++ b/templates/academy.html
@@ -565,6 +565,26 @@
                                 </svg>
                             </div>
                         </div>
+                        <div id="text_4">
+                            <div id="item_4_1"></div>
+                            <div id="item_5_1">Intermediate</div>
+                            <div id="item_6_1">
+                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                    <path d="M4 11H20V13H4V11Z"></path>
+                                    <path d="M13 4V20H11V4H13Z"></path>
+                                </svg>
+                            </div>
+                        </div>
+                        <div id="text_5">
+                            <div id="item_4_2"></div>
+                            <div id="item_5_2">Advanced</div>
+                            <div id="item_6_2">
+                                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                    <path d="M4 11H20V13H4V11Z"></path>
+                                    <path d="M13 4V20H11V4H13Z"></path>
+                                </svg>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
