Academy:Update html,css: setup-table-update-img, demo_academy_hinh26...

--- a/templates/academy.html
+++ b/templates/academy.html
@@ -586,7 +586,19 @@
                             </div>
                         </div>
                     </div>
+                    <div id="table">
+                        <div id="s1">
+                            <div id="table_s1">
+                                <div id="img_s1">
+                                    <a aria-label="How to Stay Safe in Peer-to-Peer (P2P) Trading" href="/en/articles/how-to-stay-safe-in-peer-to-peer-p2p-trading">
+                                        <div id="img_1">
 
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
             </div>
