--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -91,6 +91,13 @@ html body {
     align-items: center;
 }
 
+#conten_item {
+    display: flex;
+    align-items: center;
+    width: 1300px;
+    justify-content: space-between;
+}
+
 #conten_left {
     width: 646px;
     display: flex;
@@ -972,6 +979,7 @@ html body {
     width: 1104px;
     height: 1085.38px;
     margin: auto;
+    margin-bottom: 56px;
 }
 
 #text_tp {
@@ -1013,6 +1021,7 @@ html body {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 55px;
 }
 
 #difficulty {
@@ -1152,6 +1161,48 @@ html body {
     vertical-align: middle;
     width: 16px;
     height: 16px;
+}
+
+#table {
+    margin-bottom: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-areas: "s1 s1 s1 s2" "s3 s4 s4 s4" "s5 s5 s6 s6";
+    grid-template-rows: auto;
+    gap: 16px;
+}
+
+#s1 {
+    grid-area: s1 / s1 / s1 / s1;
+    background-color: rgb(43, 47, 54);
+    border-radius: 16px;
+    box-shadow: rgb(0 0 0 / 10%) 0px 0px 1px, rgb(0 0 0 / 8%) 0px 7px 14px, rgb(20 21 26 / 8%) 0px 3px 6px;
+}
+
+#table_s1 {
+    grid-template-columns: minmax(auto, 368px) 1fr;
+    row-gap: 0px;
+    align-items: center;
+    display: grid;
+    grid-template-rows: auto;
+}
+
+#img_s1 {
+    order: 1;
+}
+
+#img_1 {
+    padding-top: 90%;
+    background-image: url(../img/academy/788008e572724ba68cbeae9f4d3b927d.jpeg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 16px;
+    display: block;
+    height: 0px;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
 }
 
 #below {
