--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -179,7 +179,7 @@
                     <div class="content4">
                         <div class="title">
                             <h1>Popular cryptocurrencies</h1>
-                            <a href="">
+                            <a href="" st>
                                 View more markets
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="svg-better-than">
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M12.288 12l-3.89 3.89 1.768 1.767L15.823 12l-1.768-1.768-3.889-3.889-1.768 1.768 3.89 3.89z" fill="currentColor"></path>
