--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -733,7 +733,7 @@ html body {
 #dot_2 {
     background-color: rgb(217, 48, 78);
     border-radius: 50%;
-    margin-right: 5px;
+    margin-right: 8px;
     height: 6px;
     width: 6px;
 }
@@ -1183,7 +1183,7 @@ html body {
     box-shadow: rgb(0 0 0 / 10%) 0px 0px 1px, rgb(0 0 0 / 8%) 0px 7px 14px, rgb(20 21 26 / 8%) 0px 3px 6px;
 }
 
-.table_s1 {
+#table_s1 {
     grid-template-columns: minmax(auto, 368px) 1fr;
     row-gap: 0px;
     align-items: center;
@@ -1220,7 +1220,7 @@ html body {
 }
 
 #peer_to_peer {
-    font-size: 32px;
+    font-size: 33px;
     line-height: 40px;
     color: rgb(255, 255, 255);
 }
@@ -1261,7 +1261,7 @@ html body {
     width: 6px;
 }
 
-.beginner_text_2 {
+#beginner_text_2 {
     align-items: center;
     display: flex;
     font-size: 14px;
@@ -1280,8 +1280,6 @@ html body {
     height: 100%;
     align-items: start;
     display: flex;
-    width: 264px;
-    height: 331.19px;
 }
 
 .text_s2 {
@@ -1361,6 +1359,14 @@ html body {
     order: 2;
 }
 
+#table_s4 {
+    grid-template-columns: 1fr minmax(auto, 368px);
+    row-gap: 0px;
+    align-items: center;
+    display: grid;
+    grid-template-rows: auto;
+}
+
 #img_2 {
     padding-top: 90%;
     background-image: url(../img/academy/f77235707451429697aebd5261099b95.png);
@@ -1373,6 +1379,30 @@ html body {
     max-width: 100%;
     position: relative;
     width: 100%;
+}
+
+#text_s4 {
+    order: 1;
+}
+
+#bridge {
+    padding-left: 16px;
+    padding-right: 16px;
+    text-align: end;
+}
+
+#date_time_4 {
+    justify-content: end;
+    align-items: center;
+    display: flex;
+}
+
+#beginner_text_4 {
+    justify-content: end;
+    align-items: center;
+    display: flex;
+    font-size: 14px;
+    color: rgb(255, 255, 255);
 }
 
 #below {
