Academy:Update html,css: update_effect-s5-s6_table(full), demo_academy_hinh31...

--- a/templates/academy.html
+++ b/templates/academy.html
@@ -697,9 +697,40 @@
                                 </div>
                             </div>
                         </div>
+                        <div id="s5">
+                            <div class="table_s5_6">
+                                <div class="img_s5_6">
+                                    <a aria-label="What Are Ordinals? An Overview of Bitcoin NFTs" href="/en/articles/what-are-ordinals-an-overview-of-bitcoin-nfts/">
+                                        <div id="img_5"></div>
+                                    </a>
+                                </div>
+                                <div class="text_s5_6">
+                                    <div class="bridge">
+                                        <a href="/en/articles/what-are-common-bridge-security-vulnerabilities">
+                                            <div class="text_s5_s6">What Are Ordinals? An Overview of Bitcoin NFTs</div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="s6">
+                            <div class="table_s5_6">
+                                <div class="img_s5_6">
+                                    <a aria-label="What Is ERC-4337, or Account Abstraction for Ethereum?" href="/en/articles/what-is-erc-4337-or-account-abstraction-for-ethereum/">
+                                        <div id="img_6"></div>
+                                    </a>
+                                </div>
+                                <div class="text_s5_6">
+                                    <div class="bridge">
+                                        <a href="/en/articles/what-are-common-bridge-security-vulnerabilities">
+                                            <div class="text_s5_s6">What Is ERC-4337, or Account Abstraction for Ethereum?</div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
             </div>
         </div>
         <div id="below"></div>
