--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -1405,6 +1405,66 @@ html body {
     color: rgb(255, 255, 255);
 }
 
+#s5 {
+    grid-area: s5 / s5 / s5 / s5;
+    background-color: rgb(43, 47, 54);
+    border-radius: 16px;
+    box-shadow: rgb(0 0 0 / 10%) 0px 0px 1px, rgb(0 0 0 / 8%) 0px 7px 14px, rgb(20 21 26 / 8%) 0px 3px 6px;
+}
+
+.table_s5_6 {
+    grid-template-columns: minmax(auto, 176px) 1fr;
+    row-gap: 0px;
+    align-items: center;
+    display: grid;
+}
+
+#img_5 {
+    background-image: url(../img/academy/c2e00cd769f540729c3d764f05ada5f4.png);
+    padding-top: 56.25%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 16px;
+    display: block;
+    height: 0px;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+}
+
+.text_s5_6 {
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.text_s5_s6 {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    line-height: 28px;
+}
+
+#s6 {
+    grid-area: s6 / s6 / s6 / s6;
+    background-color: rgb(43, 47, 54);
+    border-radius: 16px;
+    box-shadow: rgb(0 0 0 / 10%) 0px 0px 1px, rgb(0 0 0 / 8%) 0px 7px 14px, rgb(20 21 26 / 8%) 0px 3px 6px;
+}
+
+#img_6 {
+    background-image: url(../img/academy/be47a349fab54855b99152416ab172f1.png);
+    padding-top: 56.25%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 16px;
+    display: block;
+    height: 0px;
+    max-width: 100%;
+    position: relative;
+    width: 100%;
+}
+
 #below {
     width: 100%;
     height: 524.69px;
