Academy:Update html,css: update-effect_idea, demo_academy_hinh32...

--- a/static/css/academy.css
+++ b/static/css/academy.css
@@ -975,7 +975,6 @@ html body {
 #topics_difficulty {
     padding-top: 20px;
     padding-bottom: 56px;
-    height: 1197.38px;
 }
 
 #body_TD {
@@ -983,7 +982,6 @@ html body {
     width: 1104px;
     height: 1085.38px;
     margin: auto;
-    margin-bottom: 56px;
 }
 
 #text_tp {
@@ -1463,6 +1461,121 @@ html body {
     max-width: 100%;
     position: relative;
     width: 100%;
+}
+
+#see_more {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+
+#conten_sm {
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    font-size: 14px;
+    height: 40px;
+    line-height: 20px;
+    padding-left: 16px;
+    padding-right: 16px;
+    border-radius: 8px;
+    background-color: rgb(20, 21, 26);
+    color: rgb(230, 232, 234);
+}
+
+#conten_sm p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.45;
+    color: rgb(174, 180, 188);
+}
+
+#conten_sm svg {
+    margin-left: 10px;
+    color: rgb(240, 185, 11);
+    width: 18px;
+    height: 18px;
+}
+
+#idea {
+    padding-top: 56px;
+    padding-bottom: 56px;
+    background-color: rgb(43, 47, 54);
+}
+
+#item_idea {
+    margin: auto;
+    width: 944px;
+    padding: 24px 16px;
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+    justify-content: center;
+    display: flex;
+}
+
+#conten_idea {
+    width: 944px;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+}
+
+#img_idea img {
+    width: 338px;
+    height: 338px;
+}
+
+#text_idea {
+    margin-left: 20px;
+    width: 542px;
+    height: 253.59px;
+}
+
+#text_idea h2 {
+    margin: 0px;
+    font-size: 40px;
+    margin-bottom: 8px;
+    color: rgb(230, 232, 234);
+}
+
+#text_idea p {
+    margin: 0px;
+    color: rgb(230, 232, 234);
+    font-weight: 400;
+    line-height: 1.45;
+    font-size: 24px;
+    margin-bottom: 40px;
+}
+
+#get_here {
+    align-items: center;
+    border: 0px solid transparent;
+    border-radius: 4px;
+    display: inline-flex;
+    font-weight: 500;
+    justify-content: center;
+    white-space: nowrap;
+    outline: 0px;
+    font-size: 20px;
+    height: 56px;
+    line-height: 24px;
+    padding-left: 24px;
+    padding-right: 24px;
+    background-image: linear-gradient(97deg, rgb(15, 143, 98) 25%, rgb(43, 180, 126) 50%, rgb(15, 143, 98) 75%, rgb(43, 180, 126) 99.32%);
+    background-size: 200%;
+    color: rgb(255, 255, 255);
+    transition: background-position 350ms ease-in-out 0s;
+}
+
+#get_here p {
+    margin: 0px;
+}
+
+#get_here svg {
+    margin-left: 5px;
+    width: 16px;
+    height: 16px;
 }
 
 #below {
