--- a/templates/academy.html
+++ b/templates/academy.html
@@ -730,6 +730,37 @@
                             </div>
                         </div>
                     </div>
+                    <div id="see_more">
+                        <a href="/en/articles">
+                            <div id="conten_sm">
+                                <p>See more content about this topic</p>
+                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                        <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                    </svg>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div id="idea">
+                <div id="item_idea">
+                    <div id="conten_idea">
+                        <div id="img_idea">
+                            <img src="../static/img/academy/illus-getting-started.svg" alt="">
+                        </div>
+                        <div id="text_idea">
+                            <h2>No idea what you just scrolled through?</h2>
+                            <p>Not to worry. Our no-nonsense beginner's guide will get you up to speed.</p>
+                            <a href="">
+                                <div id="get_here">
+                                    <p>Get started here</p>
+                                    <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                        <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                    </svg>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
