Trade_coin: Body - framing with grid container - Update html, css and add demo02

--- a/static/css/trade_coin.css
+++ b/static/css/trade_coin.css
@@ -75,3 +75,56 @@ html {
     -webkit-tap-highlight-color: transparent;
     min-height: 100vh;
 }
+
+.trade_coin{
+    box-sizing: border-box;
+    min-width: 0;
+    margin: 0;
+}
+.grid-container{
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    background-color: rgb(37, 41, 48);
+    display: grid;
+    gap: 1px;
+    grid-template:
+        "header header header header header" minmax(64px, auto)
+        "left subHeader subHeader market right" 68px
+        "left orderbook chart market right" 320px
+        "left orderbook chart trades right" 160px
+        "left orderbook orderform trades right" 1.15fr
+        "left orderbook orderform marketActivity right" auto
+        "left basictable basictable basictable right" 285px
+        "footer footer footer footer footer" 24px / 1fr minmax(253px, 320px) minmax(510px, 880px) minmax(253px, 320px) 1fr;
+}
+.header{
+    grid-area: header;
+}
+.subHeader{
+    grid-area: subHeader;
+}
+.orderbook{
+    grid-area: orderbook;
+}
+.chart{
+    grid-area: chart;
+}
+.orderform{
+    grid-area: orderform;
+}
+.market{
+    grid-area: market;
+}
+.trades{
+    grid-area: trades;
+}
+.marketActivity{
+    grid-area: marketActivity;
+}
+.basictable{
+    grid-area: basictable;
+}
+.footer{
+    grid-area: footer;
+}
