--- a/templates/trade_coin.html
+++ b/templates/trade_coin.html
@@ -4,17 +4,31 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Binance - Cryptocurrency Exchange</title>
+    <title>29 666 888 | BTCUSDT | Binance</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="https://public.bnbstatic.com/static/images/common/favicon.ico"
         data-shuvi-head="true" />
     <script src="https://kit.fontawesome.com/0d0d9bdf04.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../static/css/homepage.css">
+    <link rel="stylesheet" href="../static/css/trade_coin.css">
 </head>
 
 <body>
     <div id="app">
+        <div class="trade_coin">
+            <div class="grid-container">
+                <div class="header"></div>
+                <div class="subHeader"></div>
+                <div class="orderbook"></div>
+                <div class="chart"></div>
+                <div class="orderform"></div>
+                <div class="market"></div>
+                <div class="trades"></div>
+                <div class="marketActivity"></div>
+                <div class="basictable"></div>
+                <div class="footer"></div>
+            </div>
+        </div>
     </div>
 
 </body>
